DTSRD-3066: Fix test cases